LeasedLineTools/src/objects/Product2.object
<CustomObject>
    <fields>
        <fullName>Bandwidth__c</fullName>
        <label>Bandwidth</label>
        <picklist>
            <picklistValues>
                <fullName>10Mb</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>20Mb</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>30Mb</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>40Mb</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>50Mb</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>100Mb</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>200Mb</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>300Mb</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>500Mb</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>1Gb</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Bearer__c</fullName>
        <label>Bearer</label>
        <picklist>
            <picklistValues>
                <fullName>100Mb</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>1Gb</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Cost_Price__c</fullName>
        <label>Cost Price</label>
        <precision>12</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Default_Duration__c</fullName>
        <label>Duration</label>
        <precision>2</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Fixed_Price_Product__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Fixed Price Product</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Term__c</fullName>
        <label>Term</label>
        <picklist>
            <picklistValues>
                <fullName>1</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>2</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>3</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>4</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>5</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>lineProvider__c</fullName>
        <label>lineProvider</label>
        <picklist>
            <picklistValues>
                <fullName>Virgin</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>BT</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Talktalk</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <listViews>
        <fullName>AllProducts</fullName>
        <filterScope>Everything</filterScope>
        <label>All Products</label>
    </listViews>
</CustomObject>